fixed dropdown and scrollbar bugs

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -137,11 +137,10 @@
     @apply border-border outline-ring/50;
   }
   html {
-    zoom: 1.1;
+    font-size: 17.6px;
   }
   body {
     @apply bg-background text-foreground;
-    font-size: 13px;
     line-height: 1.5;
   }
   
